<resources>
    <string name="app_name">My notes</string>
    <string name="my_notes">My notes</string>
    <string name="search_notes">Search notes</string>
    <string name="title">Title</string>
    <string name="write_something">Write something here…</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_text">Enter text</string>
    <string name="change_note_color">Change note color</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="add_link">Add link</string>
    <string name="add_image">Add image</string>
    <string name="add_note">Add note</string>
    <string name="add_url">Enter url</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="toast_enter_url">Enter URL</string>
    <string name="toast_valid_url">Link added successfully</string>
    <string name="toast_enter_valid_url">Incorrect url entered</string>
    <string name="delete">Delete</string>
    <string name="delete_note">Delete note?</string>
    <string name="created_date">Created:</string>
    <string name="updated_date">Updated:</string>
    <string name="copy">Copy</string>
    <string name="open">Open</string>
    <string name="link_copied">Link copied</string>
    <string name="menu">Menu</string>
    <string name="all">All</string>
    <string name="note_updated">Note updated</string>
    <string name="note_saved">Note saved</string>
    <string name="remove">Remove</string>
    <string name="to_return">To return</string>
    <string name="hide_done">Hide marked notes</string>
    <string name="settings">Settings</string>
    <string name="set_theme">Set theme</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="delete_all_notes_accept">Delete all notes?</string>
    <string name="message">Notes will be deleted irrevocably!</string>
    <string name="successfully">Successfully!</string>
    <string name="the_list_is_empty">The list is empty!</string>
    <string name="light">day</string>
    <string name="dark">night</string>
    <string name="auto">auto</string>
    <string name="disable_animation">Disable animation</string>
    <string name="delete_selected_notes">Delete selected notes?</string>
    <string name="message_2">Selected notes will be deleted irrevocably!</string>
    <string name="note_copied">Note copied</string>
    <string name="no_entries_to_copy">No entries to copy</string>
    <string name="share">Share</string>
    <string name="hide_images">Hide images</string>
    <string name="hide_preview_link">Hide preview link</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="a_a">Aa</string>
    <string name="message_3">The saved image is also deleted!</string>
    <string name="ask">Don\'t ask again</string>
    <string name="replace_image">Replace image?</string>
    <string name="the_old_image_will_be_deleted">The old image will be deleted!</string>
    <string name="replace">Replace</string>
    <string name="rate_app">Rate app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="ui">UI</string>
    <string name="other">Other</string>
    <string name="delete_image">Delete image?</string>
    <string name="tooltips_favorite">Pin a note</string>
    <string name="tooltips_share">Share note</string>
    <string name="tooltips_add_picture">Add image</string>
    <string name="tooltips_add_url">Add link</string>
    <string name="tooltips_add_complete">Mark as done</string>
    <string name="feedBack">Feedback</string>
    <string name="toast_helper_copy_ulr">Copy link</string>
    <string name="toast_helper_delete_ulr">Remove link</string>
    <string name="toast_helper_share_ulr">Share link</string>
    <string name="toast_helper_open_ulr">Open link</string>
    <string name="toast_helper_edit_ulr">Edit link</string>
    <string name="note_added">Note add</string>
    <string name="note_is_empty">Note is empty!</string>
    <string name="tooltips_make_a_copy">Make a copy</string>
    <string name="copy_text_note">Note text copied</string>
    <string name="tooltips_copy_text_note">Copy note text</string>
    <string name="set_text_size">Set text size</string>
    <string name="speech_message">Your device does not support speech recognizer!</string>
    <string name="sample_text_size">Sample text size</string>
    <string name="select_text_size">Select text size</string>
    <string name="preview_count">Number of lines in preview</string>
    <string name="select_count_lines">Select the number of lines</string>
    <string name="_1">1 line…</string>
    <string name="_3">3 lines…</string>
    <string name="_5">5 lines…</string>
    <string name="_7">7 lines…</string>
    <string name="_10">10 lines…</string>
    <string name="open_source_libraries">Open source libraries</string>
    <string name="resources_used">Resources used:</string>
    <string name="icon_icons_com" translatable="false">icon-icons.com</string>
    <string name="android_asset_studio" translatable="false">Android Asset Studio</string>
    <string name="flaticon" translatable="false">Flaticon</string>
    <string name="in_color_balance" translatable="false">IN COLOR BALANCE</string>
    <string name="color_tool" translatable="false">Color tool</string>
    <string name="lottiefiles" translatable="false">LottieFiles</string>
    <string name="richlinkpreview" translatable="false">RichLinkPreview</string>
    <string name="ok" translatable="false">OK</string>
    <string name="tooltips" translatable="false">Tooltips</string>
    <string name="recommendation">It is not recommended to delete files from this folder</string>
    <string name="share_app">Share app</string>
</resources>