<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_dialog_preview_lines"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_12sdp"
    android:background="@drawable/background_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_set_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/select_count_lines"
        android:textColor="?attr/color"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_lines_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:text="@string/_1"
        android:textColor="?attr/color"
        android:textSize="@dimen/_15ssp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_lines_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:text="@string/_3"
        android:textColor="?attr/color"
        android:textSize="@dimen/_15ssp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_lines_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:text="@string/_5"
        android:textColor="?attr/color"
        android:textSize="@dimen/_15ssp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_lines_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:text="@string/_7"
        android:textColor="?attr/color"
        android:textSize="@dimen/_15ssp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_lines_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:text="@string/_10"
        android:textColor="?attr/color"
        android:textSize="@dimen/_15ssp"
        android:textStyle="normal" />
</LinearLayout>