<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".activities.SettingsActivity">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="UnusedAttribute"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/settings"
        android:textColor="?attr/color"
        android:textSize="@dimen/_16ssp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/iv_close"
        app:layout_constraintStart_toEndOf="@+id/iv_close" />


    <TextView
        android:id="@+id/tv_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="@string/set_theme"
        android:textColor="?attr/color"
        android:textSize="@dimen/_14ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_close" />

    <RadioGroup
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_theme">

        <RadioButton
            android:id="@+id/rb_auto"
            android:background="?android:attr/selectableItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            tools:ignore="UnusedAttribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto"
            android:textSize="@dimen/_12ssp" />

        <RadioButton
            android:id="@+id/rb_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            tools:ignore="UnusedAttribute"
            android:text="@string/light"
            android:textSize="@dimen/_12ssp" />

        <RadioButton
            android:id="@+id/rb_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            tools:ignore="UnusedAttribute"
            android:text="@string/dark"
            android:textSize="@dimen/_12ssp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_switch_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="UnusedAttribute"
        android:text="@string/disable_animation"
        android:textColor="?attr/color"
        android:textSize="@dimen/_14ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_theme" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_anim"
        android:layout_width="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="UnusedAttribute"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:theme="@style/MySwitchStyle"
        app:layout_constraintBottom_toBottomOf="@+id/tv_switch_anim"
        app:layout_constraintStart_toEndOf="@+id/tv_switch_anim"
        app:layout_constraintTop_toTopOf="@+id/tv_switch_anim" />

    <TextView
        android:id="@+id/tv_image_visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="UnusedAttribute"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/hide_images"
        android:textColor="?attr/color"
        android:textSize="@dimen/_14ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_switch_anim" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_image_visible"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:theme="@style/MySwitchStyle"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="UnusedAttribute"
        app:layout_constraintBottom_toBottomOf="@+id/tv_image_visible"
        app:layout_constraintStart_toEndOf="@+id/tv_image_visible"
        app:layout_constraintTop_toTopOf="@+id/tv_image_visible" />

    <TextView
        android:id="@+id/tv_hide_preview_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="UnusedAttribute"
        android:text="@string/hide_preview_link"
        android:textColor="?attr/color"
        android:textSize="@dimen/_14ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_image_visible" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_hide_preview_link"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:theme="@style/MySwitchStyle"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="UnusedAttribute"
        app:layout_constraintBottom_toBottomOf="@+id/tv_hide_preview_link"
        app:layout_constraintStart_toEndOf="@+id/tv_hide_preview_link"
        app:layout_constraintTop_toTopOf="@+id/tv_hide_preview_link" />

    <TextView
        android:id="@+id/tv_delete_all_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="UnusedAttribute"
        android:text="@string/delete_all_notes"
        android:textColor="?attr/color"
        android:textSize="@dimen/_14ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hide_preview_link" />

    <ImageView
        android:id="@+id/iv_delete_all_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_6sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete_forever"
        app:layout_constraintBottom_toBottomOf="@+id/tv_delete_all_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_delete_all_notes" />

</androidx.constraintlayout.widget.ConstraintLayout>