<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_dialog_delete_note"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_12sdp"
    android:background="@drawable/background_dialog_delete">

    <TextView
        android:id="@+id/tv_replace_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@null"
        android:gravity="center_vertical"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:text="@string/replace_image"
        android:textColor="?attr/color"
        android:textSize="@dimen/_21ssp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginEnd="@dimen/_6sdp" />

    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_old_image_will_be_deleted"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/tv_replace_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_replace_text"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_replace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="UnusedAttribute"
        android:text="@string/replace"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_20ssp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_message" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_detail_replace_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/ask"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="UnusedAttribute"
        android:textSize="@dimen/_11sdp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/tv_replace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_replace" />

</androidx.constraintlayout.widget.ConstraintLayout>