<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_dialog_delete_all_selected_notes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_12sdp"
    android:background="@drawable/background_dialog_delete">

    <TextView
        android:id="@+id/tv_delete_all_notes_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@null"
        android:gravity="center_vertical"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:text="@string/delete_selected_notes"
        android:textColor="?attr/color"
        android:textSize="@dimen/_17ssp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_below="@+id/tv_delete_all_notes_dialog"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/message_2"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_9ssp" />

    <TextView
        android:id="@+id/tv_delete_all_selected_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dialog_message"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/delete"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_16ssp"
        android:textStyle="normal"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>